namespace MTG_Emulator.Unity.Synchronization.Enums;

public enum ZoneType
{
    Hand,
    Bf,
    Library,
    Graveyard,
    Exile,
}